--- a/demos/bridge/richfaces4-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/richfaces4-portlet/src/main/webapp/views/applicant.xhtml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:a4j="http://richfaces.org/a4j"
-	xmlns:aui="http://liferay.com/faces/aui" xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:bridge="http://liferay.com/faces/bridge" xmlns:example-cc="http://java.sun.com/jsf/composite/example-cc"
-	xmlns:rich="http://richfaces.org/rich" xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:aui="http://liferay.com/faces/aui" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:h="http://xmlns.jcp.org/jsf/html"
+	xmlns:bridge="http://liferay.com/faces/bridge" xmlns:example-cc="http://xmlns.jcp.org/jsf/composite/example-cc"
+	xmlns:rich="http://richfaces.org/rich" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<h:outputScript library="issues" name="RF-12182.js" target="head" />
 	<example-cc:clipboard label="#{i18n['job-application']}" />
