--- a/demos/bridge/icefaces4-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/icefaces4-portlet/src/main/webapp/views/applicant.xhtml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:example-cc="http://java.sun.com/jsf/composite/example-cc"
-	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:ace="http://www.icefaces.org/icefaces/components"
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:example-cc="http://xmlns.jcp.org/jsf/composite/example-cc"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:ace="http://www.icefaces.org/icefaces/components"
 	xmlns:icecore="http://www.icefaces.org/icefaces/core">
 
 	<icecore:config messagePersistence="false" />
