--- a/demos/bridge/icefaces4-portlet/src/main/webapp/views/confirmation.xhtml
+++ b/demos/bridge/icefaces4-portlet/src/main/webapp/views/confirmation.xhtml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<f:view xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:icecore="http://www.icefaces.org/icefaces/core"
+<f:view xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:icecore="http://www.icefaces.org/icefaces/core"
 	xmlns:ace="http://www.icefaces.org/icefaces/components"
-	xmlns:example-cc="http://java.sun.com/jsf/composite/example-cc" xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:example-cc="http://xmlns.jcp.org/jsf/composite/example-cc" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 	<h:head />
 	<h:body styleClass="icefaces4-portlet">
 		<ui:include src="styling.xhtml" />
