--- a/demos/bridge/primefaces5-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/primefaces5-portlet/src/main/webapp/views/applicant.xhtml
@@ -117,9 +117,7 @@
 						<p:confirmDialog message="#{i18n['are-you-sure-you-want-to-delete-this']}" severity="alert"
 							widgetVar="confirmation">
 							<p:commandButton id="confirm" actionListener="#{applicantBackingBean.deleteUploadedFile}"
-								oncomplete="confirmation.hide()" update="uploadedFilesTable" value="#{i18n['yes']}">
-								<f:param name="uploadedFileId" value="#{uploadedFile.id}" />
-							</p:commandButton>
+								oncomplete="confirmation.hide()" update="uploadedFilesTable" value="#{i18n['yes']}" />
 							<p:commandButton id="decline" oncomplete="confirmation.hide()" value="#{i18n['no']}" type="button" />
 						</p:confirmDialog>
 						<h3>#{i18n['attachments']}</h3>
