FACES-2070 Rename datePattern and timePattern to pattern for consistency

--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/date-pattern/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/date-pattern/inputDate.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-inputdate-date-pattern-example']}">
-				<alloy:inputDate id="birthday" datePattern="EEEE, MMM dd, yyyy" value="#{inputDateModelBean.birthday}" />
+				<alloy:inputDate id="birthday" pattern="EEEE, MMM dd, yyyy" value="#{inputDateModelBean.birthday}" />
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
