--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/instant-ajax/inputDate.xhtml
@@ -7,7 +7,7 @@
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-inputdate-instant-ajax-example-1']}" number="1">
 				<alloy:field label="#{i18n['birthday']}">
-					<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" value="#{inputDateModelBean.birthday}">
+					<alloy:inputDate id="birthday" pattern="MM/dd/yyyy" value="#{inputDateModelBean.birthday}">
 						<f:ajax render="@form" />
 					</alloy:inputDate>
 					<alloy:message for="birthday" />
@@ -26,7 +26,7 @@
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-inputdate-instant-ajax-example-2']}" number="2">
 				<alloy:field label="#{i18n['birthday']}">
-					<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" value="#{inputDateModelBean.birthday}">
+					<alloy:inputDate id="birthday" pattern="MM/dd/yyyy" value="#{inputDateModelBean.birthday}">
 						<f:ajax event="change" render="@form" />
 						<f:ajax event="dateSelect" render="@form" />
 					</alloy:inputDate>
