--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/multiple-panes/inputDate.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputdate/multiple-panes/inputDate.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example>
-				<alloy:inputDate id="birthday" datePattern="MM/dd/yyyy" panes="3" value="#{inputDateModelBean.birthday}" />
+				<alloy:inputDate id="birthday" pattern="MM/dd/yyyy" panes="3" value="#{inputDateModelBean.birthday}" />
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
