--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtime/filter/inputTime.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtime/filter/inputTime.xhtml
@@ -5,7 +5,7 @@
 	<ui:define name="col1">
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-inputtime-filter-example']}">
-				<alloy:inputTime id="time" value="#{inputTimeModelBean.time}" timePattern="hh:mm a" filterType="phraseMatch" />
+				<alloy:inputTime id="time" value="#{inputTimeModelBean.time}" pattern="hh:mm a" filterType="phraseMatch" />
 				<hr />
 				<alloy:commandButton value="#{i18n['submit']}">
 					<f:ajax execute="@form" render="@form" />
