--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtime/instant-ajax/inputTime.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/inputtime/instant-ajax/inputTime.xhtml
@@ -7,7 +7,7 @@
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-inputtime-instant-ajax-example-1']}" number="1">
 				<alloy:field label="#{i18n['birthday']}">
-					<alloy:inputTime id="time" timePattern="hh:mm a" value="#{inputTimeModelBean.time}">
+					<alloy:inputTime id="time" pattern="hh:mm a" value="#{inputTimeModelBean.time}">
 						<f:ajax render="@form" />
 					</alloy:inputTime>
 					<alloy:message for="time" />
@@ -26,7 +26,7 @@
 		<alloy:form>
 			<showcase:example description="#{i18n['alloy-inputtime-instant-ajax-example-2']}" number="2">
 				<alloy:field label="#{i18n['birthday']}">
-					<alloy:inputTime id="time" timePattern="hh:mm a" value="#{inputTimeModelBean.time}">
+					<alloy:inputTime id="time" pattern="hh:mm a" value="#{inputTimeModelBean.time}">
 						<f:ajax event="change" render="@form" />
 						<f:ajax event="timeSelect" render="@form" />
 					</alloy:inputTime>
