--- a/demos/bridge/richfaces4-portlet/src/main/webapp/views/portletViewMode.xhtml
+++ b/demos/bridge/richfaces4-portlet/src/main/webapp/views/portletViewMode.xhtml
@@ -7,15 +7,15 @@
 		<ui:include src="styling.xhtml" />
 		<ui:include src="applicant.xhtml" />
 		<br />
-		<aui:row>
-			<aui:col>
+		<aui:layout>
+			<aui:column>
 				<ul>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['JSF']}" /></em></li>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['RichFaces']}" /></em></li>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['Liferay Faces Alloy']}" /></em></li>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['Liferay Faces Bridge']}" /></em></li>
 				</ul>
-			</aui:col>
-		</aui:row>
+			</aui:column>
+		</aui:layout>
 	</h:body>
 </f:view>
