--- a/demos/bridge/primefaces5-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/primefaces5-portlet/src/main/webapp/views/applicant.xhtml
@@ -117,8 +117,8 @@
 						<p:confirmDialog message="#{i18n['are-you-sure-you-want-to-delete-this']}" severity="alert"
 							widgetVar="confirmation">
 							<p:commandButton id="confirm" actionListener="#{applicantBackingBean.deleteUploadedFile}"
-								oncomplete="confirmation.hide()" update="uploadedFilesTable" value="#{i18n['yes']}" />
-							<p:commandButton id="decline" oncomplete="confirmation.hide()" value="#{i18n['no']}" type="button" />
+								oncomplete="PF('confirmation').hide()" update="uploadedFilesTable" value="#{i18n['yes']}" />
+							<p:commandButton id="decline" onclick="PF('confirmation').hide()" value="#{i18n['no']}" type="button" />
 						</p:confirmDialog>
 						<h3>#{i18n['attachments']}</h3>
 						<p:commandButton id="exportButton" ajax="false" icon="ui-icon-disk" value="#{i18n['export-as-csv']}">
