FACES-2089 Fix styling issue when having Primefaces5 + datatable + Liferay 6.1

--- a/demos/bridge/primefaces5-portlet/src/main/webapp/resources/example/portlet.css
+++ b/demos/bridge/primefaces5-portlet/src/main/webapp/resources/example/portlet.css
@@ -1,3 +1,7 @@
+.jsf2-portlet .uploaded-files .ui-datatable table {
+   table-layout: auto;
+}
+
 .jsf2-portlet .uploaded-files table {
     width: 100%;
 }
