--- a/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputlink/header.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/component/alloy/outputlink/header.xhtml
@@ -1,7 +1,6 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:aui="http://liferay.com/faces/aui" xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
-	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase">
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:f="http://xmlns.jcp.org/jsf/core" 
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase">
 
 	<showcase:note>
 		<h2>#{i18n['note']}</h2>
