--- a/demos/bridge/primefaces4-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/primefaces4-portlet/src/main/webapp/views/applicant.xhtml
@@ -16,13 +16,13 @@
 					<aui:column id="c1a">
 						<aui:field id="firstNameField" label="#{i18n['first-name']}">
 							<p:inputText id="firstName" label="#{i18n['first-name']}" required="true" value="#{applicantModelBean.firstName}">
-								<f:ajax render="firstNameField" />
+								<p:ajax update="firstNameField" />
 							</p:inputText>
 							<p:message id="firstNameMessage" for="firstName" />
 						</aui:field>
 						<aui:field id="lastNameField" label="#{i18n['last-name']}">
 							<p:inputText id="lastName" label="#{i18n['last-name']}" required="true" value="#{applicantModelBean.lastName}">
-								<f:ajax render="lastNameField" />
+								<p:ajax update="lastNameField" />
 							</p:inputText>
 							<p:message for="lastName" />
 						</aui:field>
@@ -30,14 +30,14 @@
 							<p:inputText id="emailAddress" label="#{i18n['email-address']}" required="true"
 								validatorMessage="#{i18n['invalid-email-address']}" value="#{applicantModelBean.emailAddress}">
 								<f:validateRegex pattern=".+[@].+[.].+" />
-								<f:ajax render="emailAddressField" />
+								<p:ajax update="emailAddressField" />
 							</p:inputText>
 							<p:message for="emailAddress" />
 						</aui:field>
 						<aui:field id="phoneNumberField" label="#{i18n['phone-number']}">
 							<p:inputText id="phoneNumber" label="#{i18n['phone-number']}" required="true"
 								value="#{applicantModelBean.phoneNumber}">
-								<f:ajax render="phoneNumberField" />
+								<p:ajax update="phoneNumberField" />
 							</p:inputText>
 							<p:message for="phoneNumber" />
 						</aui:field>
@@ -48,13 +48,13 @@
 								pattern="#{portletPreferencesValues['datePattern'][0]}" showOn="button"
 								value="#{applicantModelBean.dateOfBirth}">
 								<f:convertDateTime pattern="#{portletPreferencesValues['datePattern'][0]}" />
-								<f:ajax render="dateOfBirthField" />
+								<p:ajax update="dateOfBirthField" />
 							</p:calendar>
 							<p:message for="dateOfBirth" />
 						</aui:field>
 						<aui:field id="cityField" label="#{i18n['city']}">
 							<p:inputText id="city" label="#{i18n['city']}" required="true" value="#{applicantModelBean.city}">
-								<f:ajax render="cityField" />
+								<p:ajax update="cityField" />
 							</p:inputText>
 							<p:message id="cityMessage" for="city" />
 						</aui:field>
@@ -64,14 +64,14 @@
 								<f:selectItem itemLabel="#{i18n['select']}" itemValue="" />
 								<f:selectItems itemValue="#{province.provinceId}" itemLabel="#{province.provinceName}"
 									value="#{listModelBean.provinces}" var="province" />
-								<f:ajax render="provinceIdField" />
+								<p:ajax update="provinceIdField" />
 							</h:selectOneMenu>
 							<p:message id="provinceIdMessage" for="provinceId" />
 						</aui:field>
 						<aui:field id="postalCodeField" label="#{i18n['zip-postal']}">
 							<p:inputText id="postalCode" label="#{i18n['zip-postal']}" required="true"
 								value="#{applicantModelBean.postalCode}" valueChangeListener="#{applicantBackingBean.postalCodeListener}">
-								<f:ajax render="cityField provinceIdField postalCodeField" />
+								<p:ajax update="cityField provinceIdField postalCodeField" />
 							</p:inputText>
 							<img src="#{resource['example:icon-help.png']}" title="#{i18n['postal-code-hint']}" />
 							<p:message id="postalCodeMessage" for="postalCode" />
@@ -81,17 +81,19 @@
 				<aui:fieldset>
 					<aui:column>
 						<aui:field id="commentsField" label="#{i18n['comments']}">
-							<h:panelGroup id="showHide" layout="block">
-								<f:ajax render="commentsField">
-									<h:commandLink actionListener="#{applicantViewBean.toggleComments}"
-										rendered="#{!applicantViewBean.commentsRendered}" value="#{i18n['show']} #{i18n['comments']}" />
-									<h:commandLink actionListener="#{applicantViewBean.toggleComments}"
-										rendered="#{applicantViewBean.commentsRendered}" value="#{i18n['hide']} #{i18n['comments']}" />
-								</f:ajax>
+							<h:panelGroup id="showHide" layout="block">								
+								<h:commandLink actionListener="#{applicantViewBean.toggleComments}"
+									rendered="#{!applicantViewBean.commentsRendered}" value="#{i18n['show']} #{i18n['comments']}">
+									<p:ajax update="commentsField"/>
+								</h:commandLink>
+								<h:commandLink actionListener="#{applicantViewBean.toggleComments}"
+									rendered="#{applicantViewBean.commentsRendered}" value="#{i18n['hide']} #{i18n['comments']}">
+									<p:ajax update="commentsField"/>
+								</h:commandLink>								
 							</h:panelGroup>
 							<p:inputTextarea id="comments" cols="50" rows="10" rendered="#{applicantViewBean.commentsRendered}"
 								value="#{applicantModelBean.comments}">
-								<f:ajax />
+								<p:ajax />
 							</p:inputTextarea>
 						</aui:field>
 					</aui:column>
