--- a/demos/bridge/icefaces1-portlet/src/main/webapp/views/portletViewMode.xhtml
+++ b/demos/bridge/icefaces1-portlet/src/main/webapp/views/portletViewMode.xhtml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <f:view xmlns="http://www.w3.org/1999/xhtml" xmlns:aui="http://liferay.com/faces/aui"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ice="http://www.icesoft.com/icefaces/component" xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:alloy="http://liferay.com/faces/alloy" xmlns:f="http://java.sun.com/jsf/core" 
+	xmlns:h="http://java.sun.com/jsf/html" xmlns:ice="http://www.icesoft.com/icefaces/component" 
+	xmlns:ui="http://java.sun.com/jsf/facelets">
 	<ice:portlet styleClass="icefaces3-compat-portlet ltr">
 		<ui:include src="styling.xhtml" />
 		<ui:include src="applicant.xhtml" />
 		<br />
-		<aui:row>
-			<aui:col>
+		<alloy:row>
+			<alloy:column>
 				<ul>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['JSF']}" /></em></li>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['ICEfaces']}" /></em></li>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['Liferay Faces Alloy']}" /></em></li>
 					<li><em><h:outputText value="#{bridgeContext.bridgeConfig.attributes['Liferay Faces Bridge']}" /></em></li>
 				</ul>
-			</aui:col>
-		</aui:row>
+			</alloy:column>
+		</alloy:row>
 	</ice:portlet>
 </f:view>
