--- a/demos/bridge/primefaces5-portlet/src/main/webapp/views/applicant.xhtml
+++ b/demos/bridge/primefaces5-portlet/src/main/webapp/views/applicant.xhtml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
-	xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html" xmlns:bridge="http://liferay.com/faces/bridge"
-	xmlns:p="http://primefaces.org/ui" xmlns:example-cc="http://java.sun.com/jsf/composite/example-cc"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:f="http://xmlns.jcp.org/jsf/core"
+	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:bridge="http://liferay.com/faces/bridge"
+	xmlns:p="http://primefaces.org/ui" xmlns:example-cc="http://xmlns.jcp.org/jsf/composite/example-cc"
+	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<example-cc:clipboard label="#{i18n['job-application']}" />
 	<example-cc:sponsorButton />
@@ -85,14 +85,14 @@
 					<alloy:row>
 						<alloy:column>
 							<alloy:field id="commentsField" label="#{i18n['comments']}">
-								<h:panelGroup id="showHide" layout="block">									
+								<h:panelGroup id="showHide" layout="block">
 									<h:commandLink actionListener="#{applicantViewBean.toggleComments}"
 										rendered="#{!applicantViewBean.commentsRendered}" value="#{i18n['show']} #{i18n['comments']}">
-											<p:ajax update="commentsField"/>
+										<p:ajax update="commentsField"/>
 									</h:commandLink>
 									<h:commandLink actionListener="#{applicantViewBean.toggleComments}"
 										rendered="#{applicantViewBean.commentsRendered}" value="#{i18n['hide']} #{i18n['comments']}">
-											<p:ajax update="commentsField"/>
+										<p:ajax update="commentsField"/>
 									</h:commandLink>
 								</h:panelGroup>
 								<p:inputTextarea id="comments" cols="50" rows="10" rendered="#{applicantViewBean.commentsRendered}"
@@ -119,8 +119,8 @@
 						<p:confirmDialog message="#{i18n['are-you-sure-you-want-to-delete-this']}" severity="alert"
 							widgetVar="confirmation">
 							<p:commandButton id="confirm" actionListener="#{applicantBackingBean.deleteUploadedFile}"
-								oncomplete="confirmation.hide()" update="uploadedFilesTable" value="#{i18n['yes']}" />
-							<p:commandButton id="decline" oncomplete="confirmation.hide()" value="#{i18n['no']}" type="button" />
+								oncomplete="PF('confirmation').hide()" update="uploadedFilesTable" value="#{i18n['yes']}" />
+							<p:commandButton id="decline" onclick="PF('confirmation').hide()" value="#{i18n['no']}" type="button" />
 						</p:confirmDialog>
 						<h3>#{i18n['attachments']}</h3>
 						<p:commandButton id="exportButton" ajax="false" icon="ui-icon-disk" value="#{i18n['export-as-csv']}">
