FACES-2044 Develop portal:runtime component

--- a/demos/showcase/showcase-portlet/src/main/webapp/component/portal/runtime/general/runtime.xhtml
+++ b/demos/showcase/showcase-portlet/src/main/webapp/component/portal/runtime/general/runtime.xhtml
@@ -1,8 +1,9 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
-	xmlns:alloy="http://liferay.com/faces/alloy" xmlns:portal="http://liferay.com/faces/portal"
+<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:portal="http://liferay.com/faces/portal"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:showcase="http://xmlns.jcp.org/jsf/composite/showcase">
 
 	<showcase:example>
-		<portal:runtime portletName="#{runtimeModelBean.portletName}"/>
+		<!-- Embed the out-of-the-box Liferay Search Portlet -->
+		<portal:runtime portletName="3" />
 	</showcase:example>
+
 </ui:composition>
